--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ textarea.form-control { min-height: 150px; line-height: 1.5; resize: vertical; }
 .cf:after,.container:after,.row:after,.form-group:after { clear: both; }
 
 /* layout */
-.container { margin-right: auto; margin-left: auto; padding-right: 10px; padding-left: 10px; width: 960px; }
+.container { margin-right: auto; margin-left: auto; padding-right: 10px; padding-left: 10px; max-width: 960px; }
 
 #page {}
 
@@ -109,13 +109,13 @@ textarea.form-control { min-height: 150px; line-height: 1.5; resize: vertical; }
 
 /* tablet landscape */
 @media only screen and (max-width: 979px){
-  .container { width: 744px; }.col-md-1,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,.col-md-7,.col-md-8,.col-md-9,.col-md-10,.col-md-11,.col-md-12 { width: 100%; float: none; }.col-md-pull-12,.col-md-pull-11,.col-md-pull-10,.col-md-pull-9,.col-md-pull-8,.col-md-pull-7,.col-md-pull-6,.col-md-pull-5,.col-md-pull-4,.col-md-pull-3,.col-md-pull-2,.col-md-pull-1,.col-md-pull-0 { right: auto; }.col-md-push-12,.col-md-push-11,.col-md-push-10,.col-md-push-9,.col-md-push-8,.col-md-push-7,.col-md-push-6,.col-md-push-5,.col-md-push-4,.col-md-push-3,.col-md-push-2,.col-md-push-1,.col-md-push-0 { left: auto; }.col-md-offset-12,.col-md-offset-11,.col-md-offset-10,.col-md-offset-9,.col-md-offset-8,.col-md-offset-7,.col-md-offset-6,.col-md-offset-5,.col-md-offset-4,.col-md-offset-3,.col-md-offset-2,.col-md-offset-1,.col-md-offset-0 { margin-left: 0; }
+  .container { max-width: 744px; }.col-md-1,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,.col-md-7,.col-md-8,.col-md-9,.col-md-10,.col-md-11,.col-md-12 { width: 100%; float: none; }.col-md-pull-12,.col-md-pull-11,.col-md-pull-10,.col-md-pull-9,.col-md-pull-8,.col-md-pull-7,.col-md-pull-6,.col-md-pull-5,.col-md-pull-4,.col-md-pull-3,.col-md-pull-2,.col-md-pull-1,.col-md-pull-0 { right: auto; }.col-md-push-12,.col-md-push-11,.col-md-push-10,.col-md-push-9,.col-md-push-8,.col-md-push-7,.col-md-push-6,.col-md-push-5,.col-md-push-4,.col-md-push-3,.col-md-push-2,.col-md-push-1,.col-md-push-0 { left: auto; }.col-md-offset-12,.col-md-offset-11,.col-md-offset-10,.col-md-offset-9,.col-md-offset-8,.col-md-offset-7,.col-md-offset-6,.col-md-offset-5,.col-md-offset-4,.col-md-offset-3,.col-md-offset-2,.col-md-offset-1,.col-md-offset-0 { margin-left: 0; }
   .nav-menu,.nav-menu > li { float: none; left: auto; right: auto; }
 }
 
 /* tablet portrait / mobile landscape */
 @media only screen and (max-width: 767px){
-  .container,.row { margin: 0; padding: 0; width: 100%; }
+  .container,.row { margin: 0; padding: 0; }
   .row .row { width: auto; margin-right: -10px; margin-left: -10px; }
   .col-sm-1,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,.col-sm-7,.col-sm-8,.col-sm-9,.col-sm-10,.col-sm-11,.col-sm-12 { width: 100%; float: none; }.col-sm-pull-12,.col-sm-pull-11,.col-sm-pull-10,.col-sm-pull-9,.col-sm-pull-8,.col-sm-pull-7,.col-sm-pull-6,.col-sm-pull-5,.col-sm-pull-4,.col-sm-pull-3,.col-sm-pull-2,.col-sm-pull-1,.col-sm-pull-0 { right: auto; }.col-sm-push-12,.col-sm-push-11,.col-sm-push-10,.col-sm-push-9,.col-sm-push-8,.col-sm-push-7,.col-sm-push-6,.col-sm-push-5,.col-sm-push-4,.col-sm-push-3,.col-sm-push-2,.col-sm-push-1,.col-sm-push-0 { left: auto; }.col-sm-offset-12,.col-sm-offset-11,.col-sm-offset-10,.col-sm-offset-9,.col-sm-offset-8,.col-sm-offset-7,.col-sm-offset-6,.col-sm-offset-5,.col-sm-offset-4,.col-sm-offset-3,.col-sm-offset-2,.col-sm-offset-1,.col-sm-offset-0 { margin-left: 0; }
 }
