--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,17 @@ audio,canvas,img,svg,video { vertical-align: middle; }
 .well { padding: 10px 20px; background: rgba(0,0,0,0.1); }
 .well-small { padding: 10px; }
 
+/* utility */
+.u-pd-xxl{padding:40px;}.u-pd-xl{padding:33px;}.u-pd-lg{padding:27px;}.u-pd-md{padding:20px;}.u-pd-sm{padding:12px;}.u-pd-xs{padding:9px;}.u-pd-xxs{padding:6px;}.u-pd-n{padding:0;}.u-mr-xxl{margin:40px;}.u-mr-xl{margin:33px;}.u-mr-lg{margin:27px;}.u-mr-md{margin:20px;}.u-mr-sm{margin:12px;}.u-mr-xs{margin:9px;}.u-mr-xxs{margin:6px;}.u-mr-n{margin:0;}.u-mr-t-xxl{margin-top:40px;}.u-mr-t-xl{margin-top:33px;}.u-mr-t-lg{margin-top:27px;}.u-mr-t-md{margin-top:20px;}.u-mr-t-sm{margin-top:12px;}.u-mr-t-xs{margin-top:9px;}.u-mr-t-xxs{margin-top:6px;}.u-mr-t-n{margin-top:0;}.u-pd-t-xxl{padding-top:40px;}.u-pd-t-xl{padding-top:33px;}.u-pd-t-lg{padding-top:27px;}.u-pd-t-md{padding-top:20px;}.u-pd-t-sm{padding-top:12px;}.u-pd-t-xs{padding-top:9px;}.u-pd-t-xxs{padding-top:6px;}.u-pd-t-n{padding-top:0;}.u-mr-b-xxl{margin-bottom:40px;}.u-mr-b-xl{margin-bottom:33px;}.u-mr-b-lg{margin-bottom:27px;}.u-mr-b-md{margin-bottom:20px;}.u-mr-b-sm{margin-bottom:12px;}.u-mr-b-xs{margin-bottom:9px;}.u-mr-b-xxs{margin-bottom:6px;}.u-mr-b-n{margin-bottom:0;}.u-pd-b-xxl{padding-bottom:40px;}.u-pd-b-xl{padding-bottom:33px;}.u-pd-b-lg{padding-bottom:27px;}.u-pd-b-md{padding-bottom:20px;}.u-pd-b-sm{padding-bottom:12px;}.u-pd-b-xs{padding-bottom:9px;}.u-pd-b-xxs{padding-bottom:6px;}.u-pd-b-n{padding-bottom:0;}.u-mr-r-xxl{margin-right:40px;}.u-mr-r-xl{margin-right:33px;}.u-mr-r-lg{margin-right:27px;}.u-mr-r-md{margin-right:20px;}.u-mr-r-sm{margin-right:12px;}.u-mr-r-xs{margin-right:9px;}.u-mr-r-xxs{margin-right:6px;}.u-mr-r-n{margin-right:0;}.u-pd-r-xxl{padding-right:40px;}.u-pd-r-xl{padding-right:33px;}.u-pd-r-lg{padding-right:27px;}.u-pd-r-md{padding-right:20px;}.u-pd-r-sm{padding-right:12px;}.u-pd-r-xs{padding-right:9px;}.u-pd-r-xxs{padding-right:6px;}.u-pd-r-n{padding-right:0;}.u-mr-l-xxl{margin-left:40px;}.u-mr-l-xl{margin-left:33px;}.u-mr-l-lg{margin-left:27px;}.u-mr-l-md{margin-left:20px;}.u-mr-l-sm{margin-left:12px;}.u-mr-l-xs{margin-left:9px;}.u-mr-l-xxs{margin-left:6px;}.u-mr-l-n{margin-left:0;}.u-pd-l-xxl{padding-left:40px;}.u-pd-l-xl{padding-left:33px;}.u-pd-l-lg{padding-left:27px;}.u-pd-l-md{padding-left:20px;}.u-pd-l-sm{padding-left:12px;}.u-pd-l-xs{padding-left:9px;}.u-pd-l-xxs{padding-left:6px;}.u-pd-l-n{padding-left:0;}
+.u-cols,.u-cols li { margin: 0; padding: 0; list-style: none; display: block; }
+.u-cols li { float: left; }
+.u-cols-50 li { width: 50%; }
+.u-cols-50 li:nth-child(2n + 1) { clear: left; }
+.u-cols-33 li { width: 33.333333333%; }
+.u-cols-33 li:nth-child(3n + 1) { clear: left; }
+.u-cols-25 li { width: 25%; }
+.u-cols-25 li:nth-child(4n + 1) { clear: left; }
+
 /* forms */
 fieldset { border-color: rgba(0,0,0,0.1); padding: 10px 20px 1px; -webkit-border-radius: 3px; border-radius: 3px; }
 legend { padding: 0 10px; }
