--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ html { -webkit-box-sizing: border-box; box-sizing: border-box; }
 *,*:before,*:after {
   -webkit-box-sizing: inherit;
   box-sizing: inherit;
+  -webkit-transition: all .25s ease, font-size 0s, letter-spacing 0s;
   transition: all .25s ease, font-size 0s, letter-spacing 0s;
 }
 
