--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,7 @@
 
 /* natural box model/transistion */
 html { -webkit-box-sizing: border-box; box-sizing: border-box; }
-*,*:before,*:after {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
-  -webkit-transition: all .25s ease, font-size 0s, letter-spacing 0s;
-  transition: all .25s ease, font-size 0s, letter-spacing 0s;
-}
+*,*:before,*:after { -webkit-box-sizing: inherit; box-sizing: inherit; }
 
 /* elements */
 body { font: 16px/1.5 'Raleway', Arial, sans-serif; background: #333; color: #444; }
@@ -126,6 +121,9 @@ textarea.form-control { min-height: 150px; line-height: 1.5; resize: vertical; }
 .foot-info { border-top: 1px solid rgba(255,255,255,0.1); padding: 30px 0 0; font-size: 12px; color: rgba(255,255,255,0.5); }
 .foot-info a { color: rgba(255,255,255,0.6); }
 .foot-info a:hover,.foot-info a:focus { color: #FFF; }
+
+/* transition */
+a,input,button,textarea,.anim { -webkit-transition: all .25s ease, font-size 0s, letter-spacing 0s; transition: all .25s ease, font-size 0s, letter-spacing 0s; }
 
 /* tablet landscape */
 @media only screen and (max-width: 979px){
