--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,10 @@ html { -webkit-box-sizing: border-box; box-sizing: border-box; }
 *,*:before,*:after { -webkit-box-sizing: inherit; box-sizing: inherit; }
 
 /* elements */
-body { font: 16px/1.5 'Raleway', Arial, sans-serif; background: #333; color: #444; }
+body { font: 16px/1.5 'Open Sans', Arial, sans-serif; background: #333; color: #444; }
 
-a { color: #5BC0DE; font-weight: bold; text-decoration: none; }
-a:hover,a:focus { color: #999; text-decoration: none; }
+a { color: #4299E1; font-weight: bold; text-decoration: none; }
+a:hover,a:focus { color: #2C5282; text-decoration: none; }
 
 h1,h2,h3,h4,h5,h6 { margin: 0 0 20px; font-size: 2em; line-height: 1.1; }
 h1 { font-weight: 300; }
@@ -22,40 +22,40 @@ h6 { font-size: 1.1em; }
 p,ul,ol,table,form { margin: 0 0 20px; }
 ul ul,ul ol,ol ol,ol ul{ margin-bottom: 0; }
 table table { margin-bottom: 0; }
-hr { margin: 0 0 19px; border: 0 none; border-top: 1px solid rgba(0,0,0,0.1); height: 0; background: transparent; color: transparent; }
+hr { margin: 0 0 19px; border: 0 none; border-top: 1px solid rgba(0,0,0,.1); height: 0; background: transparent; color: transparent; }
 img { max-width: 100%; height: auto; }
 audio,canvas,img,svg,video { vertical-align: middle; }
 
 /* classes */
 .browser-upgrade { padding: 0.2em; color: #222; text-align: center; }
 
-.btn { margin: 0; border: 0; padding: 4px 20px; height: auto; min-height: 30px; background: rgba(0,0,0,0.1); color: inherit; font-weight: bold; font-family: inherit; display: inline-block; vertical-align: middle; cursor: pointer; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2); }
-.btn-info { background: #5BC0DE; color: #FFF; }
-.btn-success { background: #5CB85C; color: #FFF; }
-.btn-warn { background: #F0AD4E; color: #FFF; }
-.btn-danger { background: #D9534F; color: #FFF; }
+.btn { margin: 0; border: 0; padding: 4px 20px; height: auto; min-height: 30px; background: rgba(0,0,0,.1); color: inherit; font-weight: bold; font-family: inherit; display: inline-block; vertical-align: middle; cursor: pointer; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.2); box-shadow: inset 0 0 0 1px rgba(0,0,0,.2); }
+.btn-info { background: #4299E1; color: #FFF; }
+.btn-success { background: #48BB78; color: #FFF; }
+.btn-warn { background: #ED8936; color: #FFF; }
+.btn-danger { background: #F56565; color: #FFF; }
 .btn-sm { padding: 2px 4px; min-height: 0; font-size: .8em; }
 .btn-lg { padding: 8px 20px; font-size: 1.3em; }
 .btn-xl { padding: 16px 20px; font-size: 1.5em; }
-.btn:hover,.btn:focus { background: rgba(0,0,0,0.5); color: #FFF; outline: 0; }
+.btn:hover,.btn:focus { background: rgba(0,0,0,.5); color: #FFF; outline: 0; }
 
 .text-left { text-align: left; }
 .text-center { text-align: center; }
 .text-right { text-align: right; }
 
-.text-muted { color: rgba(0,0,0,0.25); }
-.text-info { color: #5BC0DE; }
-.text-success { color: #5CB85C; }
-.text-warn { color: #F0AD4E; }
-.text-danger { color: #D9534F; }
+.text-muted { color: rgba(0,0,0,.25); }
+.text-info { color: #4299E1; }
+.text-success { color: #48BB78; }
+.text-warn { color: #ED8936; }
+.text-danger { color: #F56565; }
 
-.alert { padding: 10px 20px; color: #FFF; background: #F0AD4E; }
+.alert { padding: 10px 20px; color: #FFF; background: #ED8936; }
 .alert a { color: #FFF; }
-.alert-info { background: #5BC0DE; }
-.alert-success { background: #5CB85C; }
-.alert-danger { background: #D9534F; }
+.alert-info { background: #4299E1; }
+.alert-success { background: #48BB78; }
+.alert-danger { background: #F56565; }
 
-.well { padding: 10px 20px; background: rgba(0,0,0,0.1); }
+.well { padding: 10px 20px; background: rgba(0,0,0,.1); }
 .well-small { padding: 10px; }
 
 /* utility */
@@ -70,12 +70,11 @@ audio,canvas,img,svg,video { vertical-align: middle; }
 .u-cols-25 > li:nth-child(4n + 1) { clear: left; }
 
 /* forms */
-fieldset { border-color: rgba(0,0,0,0.1); padding: 10px 20px 1px; -webkit-border-radius: 3px; border-radius: 3px; }
-legend { padding: 0 10px; }
-label { padding: 0 0 4px; font-size: .9em; display: inline-block; font-weight: bold; }
+legend { margin: 0 0 10px; padding: 0 10px 2px; border-bottom: 1px solid rgba(0,0,0,.1); text-align: center; }
+label { margin: 0 0 4px; padding: 0; font-size: .9em; display: inline-block; font-weight: bold; }
 .form-group { margin: 0 0 20px; }
 .form-inline .form-group { display: inline-block; }
-.form-control { border: 1px solid rgba(0,0,0,0.1); padding: 4px; width: 100%; height: 30px; background: rgba(255,255,255,0.1); font-size: .9em; line-height: 30px; display: block; -webkit-box-shadow: 0 0 0 0 #44C0FE; box-shadow: 0 0 0 0 #44C0FE; }
+.form-control { border: 1px solid rgba(0,0,0,.1); padding: 4px; width: 100%; height: 30px; background: rgba(255,255,255,.1); font-size: .9em; line-height: 30px; display: block; -webkit-box-shadow: 0 0 0 0 #44C0FE; box-shadow: 0 0 0 0 #44C0FE; }
 .form-control:focus { border-color: transparent; outline: 0; -webkit-box-shadow: 0 0 0 2px #44C0FE; outline: none; box-shadow: 0 0 0 2px #44C0FE; }
 textarea.form-control { min-height: 150px; line-height: 1.5; resize: vertical; }
 .form-checkbox,.form-radio { margin-right: 10px; font-weight: inherit; cursor: pointer; }
@@ -99,11 +98,11 @@ textarea.form-control { min-height: 150px; line-height: 1.5; resize: vertical; }
 .head-logo { margin: 0; text-align: center; }
 
 /* nav */
-#nav { background: #EEE; }
+#nav { background: #FFF; }
 .nav-menu,.nav-menu > li { margin: 0; padding: 0; list-style: none; text-align: center; display: block; float: left; position: relative; }
 .nav-menu a { padding: 0 20px; color: #222; font-weight: normal; line-height: 50px; display: block; text-decoration: none; }
-.nav-menu a:hover,.nav-menu a:focus { background: rgba(0,0,0,0.2); color: #FFF; text-decoration: none; }
-.nav-menu .active { background: rgba(0,0,0,0.1); }
+.nav-menu a:hover,.nav-menu a:focus { color: #BBB; text-decoration: none; box-shadow: inset 0 -2px 0 currentColor; }
+.nav-menu .active { box-shadow: inset 0 -2px 0 currentColor; }
 .nav-center { float: right; right: 50%; }
 .nav-center > li { left: 50%; }
 
@@ -116,14 +115,14 @@ textarea.form-control { min-height: 150px; line-height: 1.5; resize: vertical; }
 /* foot */
 #foot { padding: 30px 20px 10px; color: #FFF; text-align: center; }
 .foot-content { padding: 0 0 10px; }
-.foot-content a { color: rgba(255,255,255,0.75); }
+.foot-content a { color: rgba(255,255,255,.75); }
 .foot-content a:hover,.foot-content a:focus { color: #FFF; }
-.foot-info { border-top: 1px solid rgba(255,255,255,0.1); padding: 30px 0 0; font-size: 12px; color: rgba(255,255,255,0.5); }
-.foot-info a { color: rgba(255,255,255,0.6); }
+.foot-info { border-top: 1px solid rgba(255,255,255,.1); padding: 30px 0 0; font-size: 12px; color: rgba(255,255,255,.5); }
+.foot-info a { color: rgba(255,255,255,.6); }
 .foot-info a:hover,.foot-info a:focus { color: #FFF; }
 
 /* transition */
-a,input,button,textarea,.anim { -webkit-transition: all .25s ease, font-size 0s, letter-spacing 0s; transition: all .25s ease, font-size 0s, letter-spacing 0s; }
+a,input,button,textarea,.transition { transition-property: width, height, background-color, border-color, color, fill, stroke, opacity, box-shadow, transform; transition-duration: .25s; }
 
 /* tablet landscape */
 @media only screen and (max-width: 979px){
