--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,35 @@
+:root {
+  --color-black: #000;
+  --color-white: #FFF;
+  --color-gray-100: #EEEFF0;
+  --color-gray-200: #D5D6D8;
+  --color-gray-300: #BCBDC1;
+  --color-gray-400: #8A8C93;
+  --color-gray: #585A64;
+  --color-gray-600: #4F515A;
+  --color-gray-700: #35363C;
+  --color-gray-800: #28292D;
+  --color-gray-900: #1A1B1E;
+  
+  --color-blue: #4299E1;
+  --color-blue-600: #2C5282;
+  --color-green: #48BB78;
+  --color-orange: #ED8936;
+  --color-red: #F56565;
+}
+
 /* reboot */
-*,*::before,*::after{box-sizing:border-box}html{font-family:sans-serif;line-height:1.15;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;-ms-overflow-style:scrollbar;-webkit-tap-highlight-color:transparent}@-ms-viewport{width:device-width}article,aside,dialog,figcaption,figure,footer,header,hgroup,main,nav,section{display:block}body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";font-size:1rem;font-weight:400;line-height:1.5;color:#212529;text-align:left;background-color:#fff}[tabindex="-1"]:focus{outline:0!important}hr{box-sizing:content-box;height:0;overflow:visible}h1,h2,h3,h4,h5,h6{margin-top:0;margin-bottom:0.5rem}p{margin-top:0;margin-bottom:1rem}abbr[title],abbr[data-original-title]{text-decoration:underline;-webkit-text-decoration:underline dotted;text-decoration:underline dotted;cursor:help;border-bottom:0}address{margin-bottom:1rem;font-style:normal;line-height:inherit}ol,ul,dl{margin-top:0;margin-bottom:1rem}ol ol,ul ul,ol ul,ul ol{margin-bottom:0}dt{font-weight:700}dd{margin-bottom:.5rem;margin-left:0}blockquote{margin:0 0 1rem}dfn{font-style:italic}b,strong{font-weight:bolder}small{font-size:80%}sub,sup{position:relative;font-size:75%;line-height:0;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}a{color:#007bff;text-decoration:none;background-color:transparent;-webkit-text-decoration-skip:objects}a:hover{color:#0056b3;text-decoration:underline}a:not([href]):not([tabindex]){color:inherit;text-decoration:none}a:not([href]):not([tabindex]):hover,a:not([href]):not([tabindex]):focus{color:inherit;text-decoration:none}a:not([href]):not([tabindex]):focus{outline:0}pre,code,kbd,samp{font-family:monospace,monospace;font-size:1em}pre{margin-top:0;margin-bottom:1rem;overflow:auto;-ms-overflow-style:scrollbar}figure{margin:0 0 1rem}img{vertical-align:middle;border-style:none}svg:not(:root){overflow:hidden}table{border-collapse:collapse}caption{padding-top:0.75rem;padding-bottom:0.75rem;color:#6c757d;text-align:left;caption-side:bottom}th{text-align:inherit}label{display:inline-block;margin-bottom:.5rem}button{border-radius:0}button:focus{outline:1px dotted;outline:5px auto -webkit-focus-ring-color}input,button,select,optgroup,textarea{margin:0;font-family:inherit;font-size:inherit;line-height:inherit}button,input{overflow:visible}button,select{text-transform:none}button,html [type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{padding:0;border-style:none}input[type="radio"],input[type="checkbox"]{box-sizing:border-box;padding:0}input[type="date"],input[type="time"],input[type="datetime-local"],input[type="month"]{-webkit-appearance:listbox}textarea{overflow:auto;resize:vertical}fieldset{min-width:0;padding:0;margin:0;border:0}legend{display:block;width:100%;max-width:100%;padding:0;margin-bottom:.5rem;font-size:1.5rem;line-height:inherit;color:inherit;white-space:normal}progress{vertical-align:baseline}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{outline-offset:-2px;-webkit-appearance:none}[type="search"]::-webkit-search-cancel-button,[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{font:inherit;-webkit-appearance:button}output{display:inline-block}summary{display:list-item;cursor:pointer}template{display:none}[hidden]{display:none!important}
+*,*::before,*::after{box-sizing:border-box}html{font-family:sans-serif;line-height:1.15;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;-ms-overflow-style:scrollbar;-webkit-tap-highlight-color:transparent}@-ms-viewport{width:device-width}article,aside,dialog,figcaption,figure,footer,header,hgroup,main,nav,section{display:block}body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";font-size:1rem;font-weight:400;line-height:1.5;color:var(--color-gray-600);text-align:left;background-color:var(--color-white)}[tabindex="-1"]:focus{outline:0!important}hr{box-sizing:content-box;height:0;overflow:visible}h1,h2,h3,h4,h5,h6{margin-top:0;margin-bottom:0.5rem}p{margin-top:0;margin-bottom:1rem}abbr[title],abbr[data-original-title]{text-decoration:underline;-webkit-text-decoration:underline dotted;text-decoration:underline dotted;cursor:help;border-bottom:0}address{margin-bottom:1rem;font-style:normal;line-height:inherit}ol,ul,dl{margin-top:0;margin-bottom:1rem}ol ol,ul ul,ol ul,ul ol{margin-bottom:0}dt{font-weight:700}dd{margin-bottom:.5rem;margin-left:0}blockquote{margin:0 0 1rem}dfn{font-style:italic}b,strong{font-weight:bolder}small{font-size:80%}sub,sup{position:relative;font-size:75%;line-height:0;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}a{color:var(--color-blue);text-decoration:none;background-color:transparent;-webkit-text-decoration-skip:objects}a:hover{color:var(--color-blue-600);text-decoration:underline}a:not([href]):not([tabindex]){color:inherit;text-decoration:none}a:not([href]):not([tabindex]):hover,a:not([href]):not([tabindex]):focus{color:inherit;text-decoration:none}a:not([href]):not([tabindex]):focus{outline:0}pre,code,kbd,samp{font-family:monospace,monospace;font-size:1em}pre{margin-top:0;margin-bottom:1rem;overflow:auto;-ms-overflow-style:scrollbar}figure{margin:0 0 1rem}img{vertical-align:middle;border-style:none}svg:not(:root){overflow:hidden}table{border-collapse:collapse}caption{padding-top:0.75rem;padding-bottom:0.75rem;color:var(--color-gray);text-align:left;caption-side:bottom}th{text-align:inherit}label{display:inline-block;margin-bottom:.5rem}button{border-radius:0}button:focus{outline:1px dotted;outline:5px auto -webkit-focus-ring-color}input,button,select,optgroup,textarea{margin:0;font-family:inherit;font-size:inherit;line-height:inherit}button,input{overflow:visible}button,select{text-transform:none}button,html [type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{padding:0;border-style:none}input[type="radio"],input[type="checkbox"]{box-sizing:border-box;padding:0}input[type="date"],input[type="time"],input[type="datetime-local"],input[type="month"]{-webkit-appearance:listbox}textarea{overflow:auto;resize:vertical}fieldset{min-width:0;padding:0;margin:0;border:0}legend{display:block;width:100%;max-width:100%;padding:0;margin-bottom:.5rem;font-size:1.5rem;line-height:inherit;color:inherit;white-space:normal}progress{vertical-align:baseline}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{outline-offset:-2px;-webkit-appearance:none}[type="search"]::-webkit-search-cancel-button,[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{font:inherit;-webkit-appearance:button}output{display:inline-block}summary{display:list-item;cursor:pointer}template{display:none}[hidden]{display:none!important}
 
 /* natural box model */
 html { -webkit-box-sizing: border-box; box-sizing: border-box; }
 *,*:before,*:after { -webkit-box-sizing: inherit; box-sizing: inherit; }
 
 /* elements */
-body { font: 16px/1.5 'Open Sans', Arial, sans-serif; background: #333; color: #444; }
+body { font: 16px/1.5 'Open Sans', Arial, sans-serif; background: var(--color-gray-700); color: var(--color-gray-600); }
 
-a { color: #4299E1; font-weight: bold; text-decoration: none; }
-a:hover,a:focus { color: #2C5282; text-decoration: none; }
+a { color: var(--color-blue); font-weight: bold; text-decoration: none; }
+a:hover,a:focus { color: var(--color-blue-600); text-decoration: none; }
 
 h1,h2,h3,h4,h5,h6 { margin: 0 0 20px; font-size: 2em; line-height: 1.1; }
 h1 { font-weight: 300; }
@@ -27,33 +47,33 @@ img { max-width: 100%; height: auto; }
 audio,canvas,img,svg,video { vertical-align: middle; }
 
 /* classes */
-.browser-upgrade { padding: 0.2em; color: #222; text-align: center; }
+.browser-upgrade { padding: 0.2em; color: var(--color-gray-200); text-align: center; }
 
 .btn { margin: 0; border: 0; padding: 4px 20px; height: auto; min-height: 30px; background: rgba(0,0,0,.1); color: inherit; font-weight: bold; font-family: inherit; display: inline-block; vertical-align: middle; cursor: pointer; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.2); box-shadow: inset 0 0 0 1px rgba(0,0,0,.2); }
-.btn-info { background: #4299E1; color: #FFF; }
-.btn-success { background: #48BB78; color: #FFF; }
-.btn-warn { background: #ED8936; color: #FFF; }
-.btn-danger { background: #F56565; color: #FFF; }
+.btn-info { background: var(--color-blue); color: var(--color-white); }
+.btn-success { background: var(--color-green); color: var(--color-white); }
+.btn-warn { background: var(--color-orange); color: var(--color-white); }
+.btn-danger { background: var(--color-red); color: var(--color-white); }
 .btn-sm { padding: 2px 4px; min-height: 0; font-size: .8em; }
 .btn-lg { padding: 8px 20px; font-size: 1.3em; }
 .btn-xl { padding: 16px 20px; font-size: 1.5em; }
-.btn:hover,.btn:focus { background: rgba(0,0,0,.5); color: #FFF; outline: 0; }
+.btn:hover,.btn:focus { background: rgba(0,0,0,.5); color: var(--color-white); outline: 0; }
 
 .text-left { text-align: left; }
 .text-center { text-align: center; }
 .text-right { text-align: right; }
 
 .text-muted { color: rgba(0,0,0,.25); }
-.text-info { color: #4299E1; }
-.text-success { color: #48BB78; }
-.text-warn { color: #ED8936; }
-.text-danger { color: #F56565; }
+.text-info { color: var(--color-blue); }
+.text-success { color: var(--color-green); }
+.text-warn { color: var(--color-orange); }
+.text-danger { color: var(--color-red); }
 
-.alert { padding: 10px 20px; color: #FFF; background: #ED8936; }
-.alert a { color: #FFF; }
-.alert-info { background: #4299E1; }
-.alert-success { background: #48BB78; }
-.alert-danger { background: #F56565; }
+.alert { padding: 10px 20px; color: var(--color-white); background: var(--color-orange); }
+.alert a { color: var(--color-white); }
+.alert-info { background: var(--color-blue); }
+.alert-success { background: var(--color-green); }
+.alert-danger { background: var(--color-red); }
 
 .well { padding: 10px 20px; background: rgba(0,0,0,.1); }
 .well-small { padding: 10px; }
@@ -70,12 +90,13 @@ audio,canvas,img,svg,video { vertical-align: middle; }
 .u-cols-25 > li:nth-child(4n + 1) { clear: left; }
 
 /* forms */
-legend { margin: 0 0 10px; padding: 0 10px 2px; border-bottom: 1px solid rgba(0,0,0,.1); text-align: center; }
+legend { margin: 0 0 10px; font-size: 1em; display: flex; align-items: center; opacity: .5; }
+legend:after { margin-left: 10px; width: 100%; height: 2px; background: currentColor; content: ""; flex: 1 1 0%; opacity: .25; }
 label { margin: 0 0 4px; padding: 0; font-size: .9em; display: inline-block; font-weight: bold; }
 .form-group { margin: 0 0 20px; }
 .form-inline .form-group { display: inline-block; }
-.form-control { border: 1px solid rgba(0,0,0,.1); padding: 4px; width: 100%; height: 30px; background: rgba(255,255,255,.1); font-size: .9em; line-height: 30px; display: block; -webkit-box-shadow: 0 0 0 0 #44C0FE; box-shadow: 0 0 0 0 #44C0FE; }
-.form-control:focus { border-color: transparent; outline: 0; -webkit-box-shadow: 0 0 0 2px #44C0FE; outline: none; box-shadow: 0 0 0 2px #44C0FE; }
+.form-control { border: 1px solid rgba(0,0,0,.1); padding: 4px; width: 100%; height: 30px; background: rgba(255,255,255,.1); font-size: .9em; line-height: 30px; display: block; -webkit-box-shadow: 0 0 0 0 var(--color-blue); box-shadow: 0 0 0 0 var(--color-blue); }
+.form-control:focus { border-color: transparent; outline: 0; -webkit-box-shadow: 0 0 0 2px var(--color-blue); outline: none; box-shadow: 0 0 0 2px var(--color-blue); }
 textarea.form-control { min-height: 150px; line-height: 1.5; resize: vertical; }
 .form-checkbox,.form-radio { margin-right: 10px; font-weight: inherit; cursor: pointer; }
 .form-checkbox input,.form-radio input { margin-right: 2px; }
@@ -94,15 +115,16 @@ textarea.form-control { min-height: 150px; line-height: 1.5; resize: vertical; }
 #page {}
 
 /* head */
-#head { padding: 20px; background: #FFF; }
-.head-logo { margin: 0; text-align: center; }
+#head { padding: 20px; background: var(--color-white); }
+.head-logo { margin: 0 auto; width: 50px; height: 50px; background: var(--color-gray-600); color: var(--color-white); display: flex; align-items: center; justify-content: center; font-size: 11px; border-radius: 999px; }
+.head-logo:hover,.head-logo:focus { background: var(--color-blue); color: var(--color-white); }
 
 /* nav */
-#nav { background: #FFF; }
+#nav { background: var(--color-white); }
 .nav-menu,.nav-menu > li { margin: 0; padding: 0; list-style: none; text-align: center; display: block; float: left; position: relative; }
-.nav-menu a { padding: 0 20px; color: #222; font-weight: normal; line-height: 50px; display: block; text-decoration: none; }
-.nav-menu a:hover,.nav-menu a:focus { color: #BBB; text-decoration: none; box-shadow: inset 0 -2px 0 currentColor; }
-.nav-menu .active { box-shadow: inset 0 -2px 0 currentColor; }
+.nav-menu a { padding: 0 20px; color: var(--color-gray-600); font-weight: normal; line-height: 50px; display: block; text-decoration: none; }
+.nav-menu a:hover,.nav-menu a:focus { color: var(--color-gray-300); text-decoration: none; box-shadow: inset 0 -2px 0 currentColor; }
+.nav-menu .active { color: var(--color-blue); box-shadow: inset 0 -2px 0 currentColor; }
 .nav-center { float: right; right: 50%; }
 .nav-center > li { left: 50%; }
 
@@ -110,16 +132,16 @@ textarea.form-control { min-height: 150px; line-height: 1.5; resize: vertical; }
 #hero img { width: 100%; }
 
 /* body */
-#body { padding: 20px 10px 1px; background: #FFF; }
+#body { padding: 20px 10px 1px; background: var(--color-white); }
 
 /* foot */
-#foot { padding: 30px 20px 10px; color: #FFF; text-align: center; }
+#foot { padding: 30px 20px 10px; color: var(--color-white); text-align: center; }
 .foot-content { padding: 0 0 10px; }
 .foot-content a { color: rgba(255,255,255,.75); }
-.foot-content a:hover,.foot-content a:focus { color: #FFF; }
+.foot-content a:hover,.foot-content a:focus { color: var(--color-white); }
 .foot-info { border-top: 1px solid rgba(255,255,255,.1); padding: 30px 0 0; font-size: 12px; color: rgba(255,255,255,.5); }
 .foot-info a { color: rgba(255,255,255,.6); }
-.foot-info a:hover,.foot-info a:focus { color: #FFF; }
+.foot-info a:hover,.foot-info a:focus { color: var(--color-white); }
 
 /* transition */
 a,input,button,textarea,.transition { transition-property: width, height, background-color, border-color, color, fill, stroke, opacity, box-shadow, transform; transition-duration: .25s; }
@@ -127,7 +149,9 @@ a,input,button,textarea,.transition { transition-property: width, height, backgr
 /* tablet landscape */
 @media only screen and (max-width: 979px){
   .container { max-width: 744px; }.col-md-1,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,.col-md-7,.col-md-8,.col-md-9,.col-md-10,.col-md-11,.col-md-12 { width: 100%; float: none; }.col-md-pull-12,.col-md-pull-11,.col-md-pull-10,.col-md-pull-9,.col-md-pull-8,.col-md-pull-7,.col-md-pull-6,.col-md-pull-5,.col-md-pull-4,.col-md-pull-3,.col-md-pull-2,.col-md-pull-1,.col-md-pull-0 { right: auto; }.col-md-push-12,.col-md-push-11,.col-md-push-10,.col-md-push-9,.col-md-push-8,.col-md-push-7,.col-md-push-6,.col-md-push-5,.col-md-push-4,.col-md-push-3,.col-md-push-2,.col-md-push-1,.col-md-push-0 { left: auto; }.col-md-offset-12,.col-md-offset-11,.col-md-offset-10,.col-md-offset-9,.col-md-offset-8,.col-md-offset-7,.col-md-offset-6,.col-md-offset-5,.col-md-offset-4,.col-md-offset-3,.col-md-offset-2,.col-md-offset-1,.col-md-offset-0 { margin-left: 0; }
+  .nav-menu { margin: 0 auto 20px; max-width: 320px; }
   .nav-menu,.nav-menu > li { float: none; left: auto; right: auto; }
+  .nav-menu .active { font-weight: bold; box-shadow: none; }
 }
 
 /* tablet portrait / mobile landscape */
@@ -144,10 +168,10 @@ a,input,button,textarea,.transition { transition-property: width, height, backgr
 
 /* print */
 @media print {
-  *,*:before,*:after,*:first-letter,*:first-line { background: transparent !important; color: #000 !important; -webkit-box-shadow: none !important; box-shadow: none !important; text-shadow: none !important; }
+  *,*:before,*:after,*:first-letter,*:first-line { background: transparent !important; color: var(--color-black) !important; -webkit-box-shadow: none !important; box-shadow: none !important; text-shadow: none !important; }
   a { text-decoration: underline; }
   pre { white-space: pre-wrap !important; }
-  pre,blockquote { border: 1px solid #999; page-break-inside: avoid; }
+  pre,blockquote { border: 1px solid var(--color-black); page-break-inside: avoid; }
   thead { display: table-header-group; }
   tr,img { page-break-inside: avoid; }
   p,h2,h3 { orphans: 3; widows: 3; }
